// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            7
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource4"
          onClick={[Function]}
          title="resource4"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource4
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:03.000Z"
              title="2017-12-21T15:36:03.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource9"
          onClick={[Function]}
          title="resource9"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource9
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:58.000Z"
              title="2017-12-21T15:35:58.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource19"
          onClick={[Function]}
          title="resource19"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource19
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:48.000Z"
              title="2017-12-21T15:35:48.000Z"
            >
              &lt;30s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource29"
          onClick={[Function]}
          title="resource29"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource29
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:38.000Z"
              title="2017-12-21T15:35:38.000Z"
            >
              &lt;30s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource39"
          onClick={[Function]}
          title="resource39"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource39
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:28.000Z"
              title="2017-12-21T15:35:28.000Z"
            >
              &lt;45s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource49"
          onClick={[Function]}
          title="resource49"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource49
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:18.000Z"
              title="2017-12-21T15:35:18.000Z"
            >
              &lt;1m
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource54"
          onClick={[Function]}
          title="resource54"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            resource54
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:13.000Z"
              title="2017-12-21T15:35:13.000Z"
            >
              &lt;1m
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar never shows dirty trigger button for automatic resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="pending"
              style={
                Object {
                  "animation": "glow 1s linear infinite",
                }
              }
            >
              indicator-auto-pending.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="default"
              fill="#f6685c"
            >
              indicator-auto.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           clickable"
          disabled={false}
          onClick={[Function]}
          title="Force a rebuild/update for this resource."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          
        </a>
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders queued resource with class .isQueued and NOT .isReady 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="pending"
              style={
                Object {
                  "animation": "glow 1s linear infinite",
                }
              }
            >
              indicator-auto-pending.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           isQueued"
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update if resource is already queued for build."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo empty"
          >
            —
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo empty"
          >
            —
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar shows ready + dirty trigger button for manual resource with pending changes 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="default"
              fill="#f6685c"
            >
              indicator-auto.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           clickable clickMe"
          disabled={false}
          onClick={[Function]}
          title="This manual resource has pending file changes; click to trigger an update."
        />
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
          title="snack"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="default"
              fill="#f6685c"
            >
              indicator-auto.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           clickable"
          disabled={false}
          onClick={[Function]}
          title="Force a rebuild/update for this resource."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar trigger button not ready if resource is building 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar trigger button not ready if resource waiting for first build 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
          title="All"
        >
          <div
            className="SidebarItem-allIcon"
          >
            ┌
          </div>
          <span
            className="SidebarItem-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
          title="vigoda"
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="pending"
              style={
                Object {
                  "animation": "glow 1s linear infinite",
                }
              }
            >
              indicator-auto-pending.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo empty"
          >
            —
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          disabled={true}
          onClick={[Function]}
          title="Cannot trigger an update while resource is building or build is pending."
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
